samples/_failures_safe/1761695724_c69a4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6207f9c0.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_6207f9c0.c:165:13: error: expected declaration or statement at end of input
  165 |             strcpy(analyzer->stats.most_frequent_level, "INFO");
      |             ^~~~~~
./samples/SAFE/__tmp_6207f9c0.c:165:13: error: expected declaration or statement at end of input
